# Wet1DS

./: AVLTree.cpp  AVLTree.h  CMakeLists.txt  Node.cpp  Node.h  Player.cpp  Player.h  Team.cpp  Team.h  main23a1.cpp  wet1util.h  worldcup23a1.cpp  worldcup23a1.h
